--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,4 +2,5 @@ family:
     resource: "@FamilyBundle/Resources/config/routing.yml"
     prefix:   /
 
-
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
