--- a/src/FamilyBundle/Resources/config/routing.yml
+++ b/src/FamilyBundle/Resources/config/routing.yml
@@ -3,7 +3,43 @@ family_homepage:
     defaults: { _controller: FamilyBundle:Default:index }
 
 family_phone:
-    path:     /homepage/phone
-    defaults: { _controller: FamilyBundle:phone:index }
+    path:     /phone
+    defaults: { _controller: FamilyBundle:Default:phone}
+
+family_calendar:
+    path:     /calendar
+    defaults: { _controller: FamilyBundle:Default:calendar}
+
+family_time:
+    path:     /time
+    defaults: { _controller: FamilyBundle:Default:time}
+
+family_map:
+    path:     /map
+    defaults: { _controller: FamilyBundle:Default:map}
+
+family_layout:
+    path:     /
+    defaults: { _controller: FamilyBundle:Default:layout}
+
+#----------- FOS USER BUNDLE SECURITY -----------------------
 
 
+fos_user_security:
+    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+
+fos_user_profile:
+    resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
+    prefix: /profile
+
+fos_user_register:
+    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+    prefix: /register
+
+fos_user_resetting:
+    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
+    prefix: /resetting
+
+fos_user_change_password:
+    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
+    prefix: /profile
