--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,7 +7,7 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: en
+    locale: fr
 
 framework:
     #esi:             ~
@@ -70,3 +70,6 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb' and 'couchdb'
     firewall_name: main
     user_class: FamilyBundle\Entity\User
+    registration:
+        form:
+            type: FamilyBundle\Form\RegistrationFormType
