--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -26,7 +26,10 @@ security:
                 csrf_token_generator: security.csrf.token_manager
                 # if you are using Symfony < 2.8, use the following config instead:
                 # csrf_provider: form.csrf_provider
-
+                always_use_default_target_path: false
+                default_target_path: /homepage
+                target_path_parameter: _target_path
+                use_referer: false
             logout:       true
             anonymous:    true
 
