--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -75,4 +75,4 @@ fos_user:
             type: FamilyBundle\Form\RegistrationFormType
     profile:
         form:
-            type: FamilyBundle\Form\ProfileFormType
+            type: app_user_profile
