--- a/src/FamilyBundle/Resources/config/routing.yml
+++ b/src/FamilyBundle/Resources/config/routing.yml
@@ -4,7 +4,8 @@ family_homepage:
 
 family_phone:
     path:     /phone
-    defaults: { _controller: FamilyBundle:Default:phone}
+    defaults: { _controller: FamilyBundle:Phone:index}
+    methods:  GET
 
 family_calendar:
     path:     /calendar
@@ -25,14 +26,6 @@ family_mention:
 family_login:
     path:     /
     defaults: { _controller: FamilyBundle:Security:login}
-
-family_profile:
-    path:     /profile
-    defaults: { FamilyBundle:Form:profile}
-
-family_edit:
-    path:     /profile/edit
-    defaults: { FamilyBundle:Form:profile:edit}
 
 #----------- FOS USER BUNDLE SECURITY -----------------------
 
