--- a/src/FamilyBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/FamilyBundle/Resources/config/doctrine/User.orm.yml
@@ -47,6 +47,11 @@ FamilyBundle\Entity\User:
         anniversaire:
             type: date
             column: Anniversaire
-
+#    oneToOne:
+#        start:
+#            targetEntity: FamilyBundle\Entity\Evenement
+#            joinColumn:
+#            name: user_anniversaire
+#            referencedColumnName: anniversaire
 
     lifecycleCallbacks: {  }
