Mise en place du calendrier
1. Création d'une entity Event
2. Génération d'un CRDU sur entity
3. Mise en place de la config du calendrier
4. Affichage des event dans le calendrier

--- a/src/FamilyBundle/Resources/config/doctrine/Event.orm.yml
+++ b/src/FamilyBundle/Resources/config/doctrine/Event.orm.yml
@@ -1,7 +1,7 @@
-FamilyBundle\Entity\Events:
+FamilyBundle\Entity\Event:
     type: entity
     table: null
-    repositoryClass: FamilyBundle\Repository\EventsRepository
+    repositoryClass: FamilyBundle\Repository\EventRepository
     id:
         id:
             type: integer
@@ -16,15 +16,7 @@ FamilyBundle\Entity\Events:
         titre:
             type: string
             length: 255
-        contenu:
-            type: string
-            length: 255
         color:
             type: string
             length: 255
-        add_home_actu:
-            type: boolean
-
-
-
     lifecycleCallbacks: {  }
