--- a/src/FamilyBundle/Resources/config/routing.yml
+++ b/src/FamilyBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
+family_event:
+    resource: "@FamilyBundle/Resources/config/routing/event.yml"
+    prefix:   /event
+
 #----------- FamilyAppBundle -----------------------
 family_homepage:
     path:     /homepage
@@ -55,13 +59,4 @@ fos_user_change_password:
 fos_js_routing:
     resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
 
-
-
 #----------- Calendar -------------------------------------------------
-#calendar_events:
-#    resource: "@FamilyBundle/Resources/config/routing/events.yml"
-#    prefix:   /events
-
-#calendar_homepage:
-#    path:     /calendar
-#defaults: { _controller: FamilyBundle:Default:calendar }
