Mise en place de la map
1. Ajout de geocode dans RegistrationController
2. Modification MapAction
3. Modification map.html.twig, modification de l'affichage de la map

--- a/src/FamilyBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/FamilyBundle/Resources/config/doctrine/User.orm.yml
@@ -47,6 +47,14 @@ FamilyBundle\Entity\User:
         anniversaire:
             type: date
             column: Anniversaire
+        lat:
+            type: string
+            lenght: 255
+        lng:
+            type: string
+            lenght: 255
+
+
 #    oneToOne:
 #        User:
 #            targetEntity: FamilyBundle\Entity\Event
